--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -53,7 +53,7 @@
 
     </head>
     <body>
-        <div class="container">
+        <div class="container login">
             <h1>Login</h1>
     
             <!-- Date Inputs -->
@@ -62,7 +62,7 @@
             <input id="password" type="password" placeholder="Password" ><br>
     
             <!-- Button to Process Data -->
-            <button onclick="validateUser()">login</button>
+            <button id="login-btn" onclick="validateUser()">login</button>
     
             <!-- Status Message -->
             <p id="status"></p>
