--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -53,7 +53,7 @@
 
     </head>
     <body>
-        <div class="container login">
+        <div class="container-login">
             <h1>Login</h1>
     
             <!-- Date Inputs -->
