--- a/src/static/style.css
+++ b/src/static/style.css
@@ -7,6 +7,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;  /* Add this */
+    height: 100vh;  
 }
 
 /* Common Container */
@@ -23,8 +25,13 @@ body {
 .container.header {
     text-align: center;
 }
-.container.login {
+.container-login {
     text-align: center;
+    width: 30%;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 /* Form container */
