--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -113,6 +113,8 @@
             <option value="default">--Select service--</option>
             <option value="Recharge">Recharge</option>
             <option value="Aeps">Aeps</option>
+            <option value="PaySprint-IMT">PaySprint-IMT </option>
+            
         </select>
 
         <!-- File Upload -->
