--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -115,7 +115,7 @@
             <option value="default">--Select service--</option>
             <option value="Recharge">Recharge</option>
             <option value="Aeps">Aeps</option>
-            <option value="PaySprint-IMT">PaySprint-IMT</option>
+            <option value="IMT">PaySprint-IMT</option>
         </select>
         <div id="transaction_type_wrapper" style="display: none; margin-top: 10px;">
         <label>Transaction Type:</label>
