sign out function fixed

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -125,6 +125,14 @@
             document.getElementById("transaction_type_wrapper").style.display = "none";
         }
     </script>
+    <script>
+        if (window.history && window.history.pushState) {
+            window.history.pushState(null, null, window.location.href);
+            window.onpopstate = function () {
+                window.location.reload();  // Reload on back button
+            };
+        }
+    </script>
 </head>
 
 <body class="wrapper">
