--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -24,7 +24,7 @@
 
             try {
                 // Send request to Flask backend
-                let response = await fetch("/filter_form", {
+                let response = await fetch("/index", {
                     method: "POST",
                     body: formData
                 });
