--- a/src/static/style.css
+++ b/src/static/style.css
@@ -13,12 +13,21 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     background-color: var(--apple-light-gray);
+
     color: var(--apple-dark-gray);
     margin: 0;
     padding: 0;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
+
+body.wrapper {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 1422 800'%3E%3Cdefs%3E%3ClinearGradient x1='50%25' y1='0%25' x2='50%25' y2='100%25' id='oooscillate-grad'%3E%3Cstop stop-color='hsl(206%2C 75%25%2C 49%25)' stop-opacity='1' offset='0%25'%3E%3C/stop%3E%3Cstop stop-color='hsl(331%2C 90%25%2C 56%25)' stop-opacity='1' offset='100%25'%3E%3C/stop%3E%3C/linearGradient%3E%3C/defs%3E%3Cg stroke-width='2' stroke='url(%23oooscillate-grad)' fill='none' stroke-linecap='round'%3E%3Cpath d='M 0 572 Q 355.5 -100 711 400 Q 1066.5 900 1422 572' opacity='0.64'%3E%3C/path%3E%3Cpath d='M 0 550 Q 355.5 -100 711 400 Q 1066.5 900 1422 550' opacity='0.54'%3E%3C/path%3E%3Cpath d='M 0 528 Q 355.5 -100 711 400 Q 1066.5 900 1422 528' opacity='0.36'%3E%3C/path%3E%3Cpath d='M 0 506 Q 355.5 -100 711 400 Q 1066.5 900 1422 506' opacity='0.98'%3E%3C/path%3E%3Cpath d='M 0 484 Q 355.5 -100 711 400 Q 1066.5 900 1422 484' opacity='0.52'%3E%3C/path%3E%3Cpath d='M 0 462 Q 355.5 -100 711 400 Q 1066.5 900 1422 462' opacity='0.62'%3E%3C/path%3E%3Cpath d='M 0 440 Q 355.5 -100 711 400 Q 1066.5 900 1422 440' opacity='0.92'%3E%3C/path%3E%3Cpath d='M 0 418 Q 355.5 -100 711 400 Q 1066.5 900 1422 418' opacity='0.71'%3E%3C/path%3E%3Cpath d='M 0 396 Q 355.5 -100 711 400 Q 1066.5 900 1422 396' opacity='0.18'%3E%3C/path%3E%3Cpath d='M 0 374 Q 355.5 -100 711 400 Q 1066.5 900 1422 374' opacity='0.39'%3E%3C/path%3E%3Cpath d='M 0 352 Q 355.5 -100 711 400 Q 1066.5 900 1422 352' opacity='0.12'%3E%3C/path%3E%3Cpath d='M 0 330 Q 355.5 -100 711 400 Q 1066.5 900 1422 330' opacity='0.21'%3E%3C/path%3E%3Cpath d='M 0 308 Q 355.5 -100 711 400 Q 1066.5 900 1422 308' opacity='0.91'%3E%3C/path%3E%3Cpath d='M 0 286 Q 355.5 -100 711 400 Q 1066.5 900 1422 286' opacity='0.63'%3E%3C/path%3E%3Cpath d='M 0 264 Q 355.5 -100 711 400 Q 1066.5 900 1422 264' opacity='1.00'%3E%3C/path%3E%3Cpath d='M 0 242 Q 355.5 -100 711 400 Q 1066.5 900 1422 242' opacity='0.30'%3E%3C/path%3E%3Cpath d='M 0 220 Q 355.5 -100 711 400 Q 1066.5 900 1422 220' opacity='0.65'%3E%3C/path%3E%3Cpath d='M 0 198 Q 355.5 -100 711 400 Q 1066.5 900 1422 198' opacity='0.27'%3E%3C/path%3E%3Cpath d='M 0 176 Q 355.5 -100 711 400 Q 1066.5 900 1422 176' opacity='0.23'%3E%3C/path%3E%3Cpath d='M 0 154 Q 355.5 -100 711 400 Q 1066.5 900 1422 154' opacity='0.22'%3E%3C/path%3E%3Cpath d='M 0 132 Q 355.5 -100 711 400 Q 1066.5 900 1422 132' opacity='0.75'%3E%3C/path%3E%3Cpath d='M 0 110 Q 355.5 -100 711 400 Q 1066.5 900 1422 110' opacity='0.18'%3E%3C/path%3E%3Cpath d='M 0 88 Q 355.5 -100 711 400 Q 1066.5 900 1422 88' opacity='0.80'%3E%3C/path%3E%3Cpath d='M 0 66 Q 355.5 -100 711 400 Q 1066.5 900 1422 66' opacity='0.12'%3E%3C/path%3E%3Cpath d='M 0 44 Q 355.5 -100 711 400 Q 1066.5 900 1422 44' opacity='0.43'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 
 /* Login Container */
 .apple-container {
@@ -55,6 +64,7 @@ body {
     font-size: 16px;
     color: var(--apple-label);
     margin-bottom: 30px;
+
 }
 
 /* Input Styles */
