--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -180,6 +180,10 @@
                     <option value="Recharge">Recharge</option>
                     <option value="Aeps">Aeps</option>
                     <option value="IMT">PaySprint-IMT</option>
+                    <option value="BBPS">BBPS</option>
+                    <option value="Pan_UTI">Pan_UTI</option>
+
+
                 </select>
             </div>
 
