--- a/src/static/style.css
+++ b/src/static/style.css
@@ -207,9 +207,10 @@ body.wrapper {
 .apple-card {
     background-color: white;
     border-radius: 18px;
-    padding: 30px;
+    padding: 15px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-    margin-top: 120px;
+    margin-top: 75px;
+    width: 85%;
 }
 
 .apple-card-title {
