--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -91,7 +91,7 @@
                 <input id="password" class="apple-input" type="password" placeholder="Password">
             </div>
 
-            <button id="login-btn" class="apple-button" onclick="validateUser()">Continue</button>
+            <button id="login-btn" class="apple-button" onclick="validateUser()">LogIn</button>
 
             <p id="status" class="apple-status"></p>
         </div>
