adeed vsm id to all service and added passport function basic

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -188,8 +188,7 @@
                     <option value="BBPS">BBPS</option>
                     <option value="Pan_UTI" style="color: red;">Pan_UTI</option>
                     <option value="Pan_NSDL" style="color: red;">Pan_NSDL</option>
-
-
+                    <option value="Passport" style="color: red;">Passport</option>
                 </select>
             </div>
 
